--- a/index.html
+++ b/index.html
@@ -370,7 +370,12 @@
     <div class="max-w-6xl mx-auto px-4 grid md:grid-cols-5 gap-8 items-center">
       <div class="md:col-span-2">
         <div class="aspect-square rounded-3xl bg-gradient-to-br from-brand-100 to-sand shadow-soft"></div>
-      </div>
+      <div class="aspect-square rounded-3xl shadow-soft overflow-hidden">
+  <img src="actifs/img/monji.jpg" 
+       alt="Monji — Dar Al Amana" 
+       class="w-full h-full object-cover" 
+       loading="lazy">
+</div>
       <div class="md:col-span-3">
         <h2 class="font-serif text-2xl md:text-3xl mb-4 lang-fr">À propos de Monji</h2>
         <h2 class="font-arabic text-2xl md:text-3xl mb-4 lang-ar">من هو منجي</h2>
